--- a/accounts/templates/tepbHYML/shoppinglist.html
+++ b/accounts/templates/tepbHYML/shoppinglist.html
@@ -2,13 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>shoppinglist</title>
 </head>
 <body>
-{% block content %}
-
-<h1>index</h1>
-{% endblock %}
-
+shoppinglist
 </body>
 </html>
